--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
-{% block announce %}
+{% block content %}
 <script async src="https://busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
-<span id="busuanzi_container_site_pv">
+<span id="busuanzi_container_site_puv">
     本站总访问量<span id="busuanzi_value_site_pv"></span>次, 访客数<span id="busuanzi_value_site_uv"></span>人次
 </span>
 
